--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
@@ -72,6 +73,8 @@
             "@php artisan clear-compiled",
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:meta"
-        ]
+        ],
+        "lint": "vendor/bin/php-cs-fixer fix --dry-run --diff --verbose --ansi",
+        "fixlint": "vendor/bin/php-cs-fixer fix --diff --verbose --ansi"
     }
 }
